Added Angela's changes to login

--- a/StudyBuddy/MyApplication/local.properties
+++ b/StudyBuddy/MyApplication/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 16 21:44:37 MDT 2017
-ndk.dir=C\:\\Users\\angel\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\angel\\AppData\\Local\\Android\\Sdk
+#Tue Oct 17 15:18:37 MDT 2017
+sdk.dir=/Users/caitlinard/Library/Android/sdk
