Initial push of server and sqlalchemy db

--- a/StudyBuddy/MyApplication/local.properties
+++ b/StudyBuddy/MyApplication/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 17 15:18:37 MDT 2017
-sdk.dir=/Users/caitlinard/Library/Android/sdk
+#Sun Nov 05 14:39:15 MST 2017
+sdk.dir=/Users/caitlin/Library/Android/sdk
