--- a/StudyBuddy/MyApplication/app/src/main/AndroidManifest.xml
+++ b/StudyBuddy/MyApplication/app/src/main/AndroidManifest.xml
@@ -32,7 +32,11 @@
         </activity>
         <activity
             android:name=".MainActivity2"
-            android:label="Study Buddy"></activity>
+            android:label="Study Buddy" />
+        <activity
+            android:name=".UserProfile"
+            android:label="@string/title_activity_user_profile"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
