--- a/StudyBuddy/MyApplication/app/src/main/AndroidManifest.xml
+++ b/StudyBuddy/MyApplication/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
         <activity
             android:name=".UserProfile"
             android:label="@string/title_activity_user_profile"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Notification"
+            android:label="@string/title_activity_notification"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
