--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,10 @@
             android:label="@string/title_activity_profile" />
         <activity
             android:name=".Navigation"
-            android:label="@string/title_activity_navigation"></activity>
+            android:label="@string/title_activity_navigation" />
+        <activity
+            android:name=".Notifications"
+            android:label="@string/title_activity_notifications" />
     </application>
 
 </manifest>
